--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,7 +1,11 @@
-<h1>
-    <%= @channel.name %>
-</h1>
+<div class="container mx-auto px-4 lg:px-0">
+    <h1 class="text-3xl font-bold">
+        <%= @channel.name %>
+    </h1>
+    <br>
 
-<h1>
-    Organisation: <%= @channel.organisation.name %>
-</h1>
+    <h4>
+        Organisation: <%= @channel.organisation.name %>
+    </h4>
+</div>
+
