--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,3 +1,14 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer base {
+    h1 {
+        @apply text-4xl;
+        @apply font-bold;
+    }
+
+    h2 {
+        @apply text-xl;
+    }
+}
