--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,5 +7,6 @@
     <h4>
         Organisation: <%= @channel.organisation.name %>
     </h4>
+    <%= link_to "Edit Channel", edit_channel_path(@channel), class: "text-blue-500" %>
 </div>
 
