--- a/app/views/control_panel/channels/show.html.erb
+++ b/app/views/control_panel/channels/show.html.erb
@@ -4,3 +4,10 @@
 <h3>
     <%= @channel.name %>
 </h3>
+<% if @channel.suspended_at.present? %>
+    SUSPENDED
+<% else %>
+    VALID
+<% end %>
+
+<%= button_to 'Suspend', control_panel_channel_suspension_path(@channel), method: :post, class: "border rounded-md bg-slate-900 hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 text-white font-semibold h-12 px-6 rounded-lg w-full flex items-center justify-center sm:w-auto dark:bg-sky-500 dark:highlight-white/20 dark:hover:bg-sky-400" %>
