--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,9 +1,15 @@
-<div class="container mx-auto px-4 lg:px-0">
+<div class="container mx-auto">
     <h1 class="text-3xl font-bold">
+        <% if current_user %>
+            Your logged in as <%= current_user.email %>
+        <% else %>
+            You're not logged in.
+        <% end %>
+    </h1>
+    <h1 class="">
         <%= @channel.name %>
     </h1>
     <br>
-
     <h4>
         Organisation: <%= @channel.organisation.name %>
     </h4>
