--- a/app/views/static/home_page.html.erb
+++ b/app/views/static/home_page.html.erb
@@ -1,4 +1,5 @@
 Mongeek Technologies Home Page
-<h1>
-    Mongeek Technologies Home Page
-</h1>
+<%= form_with model: Site.new do |f| %>
+    <%= f.text_field :name, class: "border rounded-md" %>
+    <%= f.submit "Create Site", class: "border rounded-md bg-slate-900 hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 text-white font-semibold h-12 px-6 rounded-lg w-full flex items-center justify-center sm:w-auto dark:bg-sky-500 dark:highlight-white/20 dark:hover:bg-sky-400"%>
+<% end %>
