--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -11,7 +11,7 @@
     </h1>
     <br>
     <h4>
-        Organisation: <%= @channel.organisation.name %>
+        Organisation: <%= @channel.site.organisation.name %>
     </h4>
     <%= link_to "Edit Channel", edit_channel_path(@channel), class: "text-blue-500" %>
 </div>
